--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "@koa/cors": "^2.2.3",
     "http": "0.0.0",
     "koa": "^2.11.0",
     "koa-router": "^7.4.0",
